Revert "Merge pull request #35 from OPITgithub/33-s4-sprint0-accesshistory"
This reverts commit 9519800cd07d48740cf486058053f0b704195430, reversing
changes made to 9dec6beb539ccac039af3f0e6917b4adb80fbd30.
